// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders shape is dot correctly 1`] = `
<span
  class="za-badge za-badge--danger za-badge--dot"
>
  <sup
    class="za-badge__content"
  />
</span>
`;

exports[`Badge sup 1`] = `
<span
  class="za-badge za-badge--danger za-badge--dot za-badge--sup"
>
  foo
  <sup
    class="za-badge__content"
  />
</span>
`;

exports[`Badge text 1`] = `
<span
  class="za-badge za-badge--danger za-badge--rect"
>
  <sup
    class="za-badge__content"
  >
    99+
  </sup>
</span>
`;

exports[`Badge theme 1`] = `
<span
  class="za-badge za-badge--warning za-badge--dot"
>
  <sup
    class="za-badge__content"
  />
</span>
`;
